--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import 'reset-css';
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import './variables.css';
+
+body {
+  font-family: var(--font-family), serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  color: var(--body-color);
+}
