--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,19 @@
 .container {
   padding: 26px 24px 90px 26px;
+  margin: 100px auto 0 auto;
+  position: relative;
   background: var(--black);
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1024px) {
+    max-width: 1168px;
+    margin-top: 150px;
     padding: 84px 80px 48px 80px;
+    background: linear-gradient(
+        to left,
+        rgba(37, 45, 55, 0) 40%,
+        var(--black) 72.92%,
+        var(--body-color) 100%
+      ),
+      linear-gradient(to bottom, rgba(0, 0, 0, 0) 75%, var(--black) 100%);
   }
 }
