--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,5 +1,10 @@
-.wrapper {
+.hero {
   color: var(--white);
+}
+
+.content {
+  position: relative;
+  z-index: 2;
 }
 
 .mainHeading {
@@ -7,7 +12,7 @@
   font-weight: 900;
   margin-bottom: 76px;
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1024px) {
     font-size: 31px;
   }
 }
@@ -21,7 +26,7 @@
   border: solid 1px var(--white);
   padding: 12px;
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1024px) {
     font-size: 14px;
   }
 }
@@ -31,7 +36,7 @@
   font-weight: 900;
   margin-bottom: 28px;
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1024px) {
     font-size: 35px;
   }
 }
@@ -43,12 +48,18 @@
   margin-bottom: 36px;
   line-height: 24px;
 
-  @media only screen and (min-width: 768px) {
+  @media only screen and (min-width: 1024px) {
     font-size: 16px;
   }
 }
 
+.mainHeading {
+  max-width: 140px;
+}
+
 .mainHeading,
 .secondaryHeading {
-  max-width: 230px;
+  @media only screen and (min-width: 1024px) {
+    max-width: 230px;
+  }
 }
